--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+div.character {
+  width: 300px;
+  height: 300px;
+  position: absolute;
+  z-index: 9;
+}
