--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,15 @@ code {
 }
 
 div.character {
+  width: 128px;
+  height: 128px;
+  position: absolute;
+  z-index: 9;
+}
+
+div.pirate {
   width: 300px;
   height: 300px;
   position: absolute;
-  z-index: 9;
+  z-index: 10;
 }
