--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,11 @@ div.pirate {
   position: absolute;
   z-index: 10;
 }
+
+div.character {
+  width: 360px;
+  height: 245px;
+  position: absolute;
+  z-index: 11;
+  border: 1px solid red;
+}
